--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo
+title: raymoe's Blog
 subtitle:
 description:
-author: John Doe
+author: raymoe
 language:
 timezone:
 
@@ -73,6 +73,8 @@ pagination_dir: page
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
 theme: landscape
+
+port: 10111
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
